# points_player

./: CMakeLists.txt  README.md
files/share/: icon.qrc
include/points_play/: common.hpp  main_window.hpp  marks_plot.hpp  points_player.hpp  qwt_plot_extcurve.hpp  qwt_plot_picker_ext.hpp  qwt_point_ext.hpp  qwt_series_data_ext.hpp
src/points_play/: main.cpp  main_window.cpp  main_window.ui  marks_plot.cpp  points_player.cpp  points_player.ui  qwt_plot_extcurve.cpp  qwt_plot_picker_ext.cpp  qwt_series_data_ext.cpp
